# checkr-intro

./: .gitignore  Cargo.toml
apps/inspectify/src/lib/: api.ts
apps/inspectify/src/lib/components/: Network.svelte  NetworkJellyfish.svelte
apps/inspectify/src/routes/(inspectify)/env/Automata/: +page.svelte
apps/inspectify/src/routes/(inspectify)/env/HelloWorld/: +page.svelte
crates/ce-shell/: Cargo.toml
crates/ce-shell/src/: lib.rs
crates/envs/ce-automata/: Cargo.toml
crates/envs/ce-automata/src/: dot.rs  lib.rs  tests.rs
crates/envs/ce-hello-world/: Cargo.toml
crates/envs/ce-hello-world/src/: lib.rs
