[package]
name = "ce-automata"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ce-core.workspace = true
gcl.workspace = true
graphviz-rust = "0.9.6"
itertools.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
tapi.workspace = true
tracing.workspace = true
